# HAL

./: .gitignore  ASCHER TWAC.TXT_ascher twac.txt.json  ASK.HAL.ipynb  ATOM LIBRARY.ipynb  BECKETT_Waiting for Godot.json  BEE_TOWER.gh  BRAIDOTTI_The Posthuman.json  BROOK AHFC.TXT_brook ahfc.txt.json  Beckett WG.txt  Braidotti TP.txt  CALVINO IC.TXT_calvino ic.txt.json  CAMPANELLA TCOTS.TXT_campanella tcots.txt.json  DICKENS ATTC.TXT_dickens attc.txt.json  EISENMAN KOOLHAAS S.TXT_eisenman koolhaas s.txt.json  FRANCOIS WMBP.TXT_francois wmbp.txt.json  GORRINGE ATBE.TXT_gorringe atbe.txt.json  GREENFIELD ATSC.TXT_greenfield atsc.txt.json  HAL&PHOEBE.gh  HAL_NOTEBOOK.ipynb  HILLIERHANSON TSLS.TXT_hillierhanson tsls.txt.json  HOLLIS CAGFY.TXT_hollis cagfy.txt.json  HOWARD GCOT.TXT_howard gcot.txt.json  JUAN RACOOP.TXT_juan racoop.txt.json  KOOHLAAS_TGC.TXT_koohlaas_tgc.txt.json  KOOLHAAS DNY.TXT_koolhaas dny.txt.json  KOOLHAAS JWRR.TXT_koolhaas jwrr.txt.json  KUNSTLER TCIM.TXT_kunstler tcim.txt.json  LECORBUSIER TANA.TXT_lecorbusier tana.txt.json  LECORBUSIER TCOT.TXT_lecorbusier tcot.txt.json  LESLIE SW.TXT_leslie sw.txt.json  LICENSE  LYNCH TIC.TXT_lynch tic.txt.json  MITCHELL MTCSATNC.TXT_mitchell mtcsatnc.txt.json  MITCHELL TLOA.TXT_mitchell tloa.txt.json  MORE U.TXT_more u.txt.json  PHEOBE_DEV.gh  PLOTS.ipynb  PRESENTATION.ipynb  PS_template.psd  RATTICLAUDEL TCOT.TXT_ratticlaudel tcot.txt.json  (+29 more)
EXAMPLES/: colors.ipynb  test.ipynb
HAL/: __init__.py  color.py  picture.py  requirements.txt  video.py
HAL.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: index.html
(+203 files in other folders)
